Bug #66323 --> always show the progress dialog even if we are already done with the download. Break apart SaveTodisk and LaunchWithTempFile into to separate methods. never try to really open or save to disk until we are sure we've brought up the progress window.

Bug #61947 --> pass in the initial time when we started the download via getDownloadInfo so
the progress dialog can use this information.

sr=sspitzer